<resources>
    <string name="app_name">Day2Day</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="mi_diario">Mi diario</string>
    <string name="tests">Tests</string>
    <string name="mi_perfil">Mi perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No hay datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="tipo_de_documentacion">Tipo de documentación</string>
    <string name="numero_de_documento_de_identidad">Número de documento de identidad</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="nivel_de_estudios">Nivel de estudios</string>
    <string name="ocupacion">Ocupación</string>
    <string name="direccion">Dirección</string>
    <string name="distrito">Distrito</string>
    <string name="provincia">Provincia</string>
    <string name="departamento">Departamento</string>
    <string name="telefono">Telefono</string>
    <string name="especialista_encargado">Especialista encargado</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="detalles_especialista">Detalles especialista</string>
    <string name="cargando_detalles_de_especialista">Cargando detalles de especialista...</string>
    <string name="descripcion">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="descripcion_de_la_pregunta">Descripcion de la pregunta</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="lorem_ipsum_largo">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="escribe_tu_diario_aqui">Escribe tu diario aquí</string>
    <string name="_00_de_00_de_0000">00 de 00 de 0000</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_tutor">Registro de tutor</string>
    <string name="correo">Correo</string>
    <string name="dni">DNI</string>
    <string name="mis_apoderados">Mis apoderados</string>
    <string name="relacion">Relacion</string>
    <string name="nombre_del_paciente">Nombre del paciente</string>
    <string name="_00_anios">00 años</string>
    <string name="registrar_apoderado">Registrar Apoderado</string>
    <string name="registro_de_paciente">Registro de paciente</string>
    <string name="editar_contrasenia">Editar contraseña</string>
    <string name="ingrese_su_contrase_a_actual">Ingrese su contraseña actual</string>
    <string name="validar_contrase_a">Validar contraseña</string>
    <string name="placeholder_reset_password_email">Ingrese su dirección de correo.\n\nSe le enviará un mensaje para poder recuperar su contraseña.</string>
    <string name="default_notification_channel_id">Notificación</string>
    <string name="fcm_message">Notificación</string>
</resources>