<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.LoginTutorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/topRoundView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="-100dp"
            android:layout_marginEnd="-100dp"
            android:background="@drawable/arc"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/big_margin"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView" />

        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backAppCompatImageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backAppCompatImageButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView"
            app:srcCompat="@drawable/ic_arrow_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.libizo.CustomEditText
        android:id="@+id/emailCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordCustomEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConstraintLayout"
        app:layout_constraintVertical_chainStyle="packed"
        app:libIZO_setBackgroundColor="@android:color/white"
        app:libIZO_setBorderColor="@android:color/darker_gray"
        app:libIZO_setBorderView="true"
        app:libIZO_setCornerRadius="@dimen/default_margin" />

    <com.libizo.CustomEditText
        android:id="@+id/passwordCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/loginCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailCustomEditText"
        app:libIZO_setBackgroundColor="@android:color/white"
        app:libIZO_setBorderColor="@android:color/darker_gray"
        app:libIZO_setBorderView="true"
        app:libIZO_setCornerRadius="@dimen/default_margin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCustomEditText">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/ingresar"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>