<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.RealizarTestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/topRoundView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="-100dp"
            android:layout_marginEnd="-100dp"
            android:background="@drawable/arc"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/big_margin"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView" />

        <TextView
            android:id="@+id/toolbarTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_big_margin"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="@dimen/big_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/backAppCompatImageButton"
            app:layout_constraintEnd_toStartOf="@id/progressBar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backAppCompatImageButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbarTitleTextView"
            app:srcCompat="@drawable/ic_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/descripcionBorderConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button_bordered"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbarConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/descripcionConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/especialistaTitleTextView"
                android:text="@string/descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginEnd="@dimen/big_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/preguntasRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:paddingBottom="@dimen/big_big_margin"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionBorderConstraintLayout"
        app:layout_constraintBottom_toTopOf="@id/guardarCardView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messageConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/preguntasRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/preguntasRecyclerView"
        app:layout_constraintTop_toTopOf="@id/preguntasRecyclerView"
        app:layout_constraintBottom_toBottomOf="@id/preguntasRecyclerView"
        android:visibility="gone">
        <TextView
            android:id="@+id/messageTextView"
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/guardarCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/guardarProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/guardarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/guardar"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>